@@ -5,7 +5,9 @@
 #       
 #  Copyright (c) 2007  Mats Bengtsson
 #  
-# $Id: URIRegisterKDE.tcl,v 1.1 2007-02-05 14:54:17 matben Exp $
+# $Id: URIRegisterKDE.tcl,v 1.2 2007-02-06 13:17:25 matben Exp $
+
+namespace eval URIRegisterKDE { }
 
 proc URIRegisterKDE::Init { } {
     global  this
@@ -19,7 +21,7 @@ proc URIRegisterKDE::Init { } {
     if {![file isdirectory $dir]} {
 	return
     }
-    RegisterKDE
+    Register
     
     component::register URIRegisterKDE  \
       {Uses KDE's service file for XMPP to handle uri parsing.}
@@ -29,14 +31,15 @@ proc URIRegisterKDE::Init { } {
 # 
 #       At least Konqurer on my SUSE box understands this.
 
-proc ::ParseURI::RegisterKDE {} {
+proc ::URIRegisterKDE::Register {} {
     global  this
 
     set prefsPath  [file nativename ~/.coccinella]
-    set scriptFile [file join $prefsPath handle_uri.tcl]
+    set scriptFile [file join $prefsPath scripts handle_uri.tcl]
 
     # Not sure how any spaces should be handled; uri parsed?
-    set protocolSpec {[Protocol]
+    set protocolSpec {\
+[Protocol]
 exec=@T %u
 protocol=xmpp
 input=none
@@ -66,26 +69,43 @@ Icon=""
     # --- Begin script ---
 
     set script {#!/bin/sh
-# the next line restarts using wish \
-    exec wish "$0" -visual best "$@"
+# the next line restarts using wish @B
+	exec wish "$0" -visual best "$@"
+
     wm withdraw .
     set prefsPath [file nativename ~/.coccinella]
     set pidFile   [file join $prefsPath coccinella.pid]
     set execFile  [file join $prefsPath launchCmd]
-    set uri [lindex $argv 0]
+
+    set runs 0
     if {[file exists $pidFile]} {
+	set fd [open $pidFile r]
+	set pid [read $fd]
+	close $fd
+	# BSD style:
+	# set pids [exec ps -xa -o pid]
+	# On unix BSD switches must not have dashes.
+	set pids [exec ps xa o pid]
+	set runs [expr {[lsearch $pids $pid] >= 0 ? 1 : 0}]
+    }
+    set uri [lindex $argv 0]
+    
+    if {$runs} {
 	send -async coccinella [list ::ParseURI::TextCmd $uri]
     } else {
 	set fd [open $execFile r]
 	set exe [read $fd]
 	close $fd
-	eval exec $exe &
+	eval exec $exe [list -uri $uri] &
     }
     exit
 }
     # --- End script ---
-    
-    # Write the launch script in to our prefs dir.
+        
+    # Trick to get the ending \ in place.
+    set script [string map {@B \\} $script]
+
+    # Write the launch script  to our prefs dir.
     if {![file exists $scriptFile]} {
 	set fd [open $scriptFile w]
 	puts $fd $script
